<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_action_bar_title">About</string>
    <string name="about_app_right_reserved">© 2013-%s   OnePlus. All Rights Reserved.</string>
    <string name="about_app_version_text">Version %s</string>
    <string name="about_privacy_policy">Privacy Policy</string>
    <string name="about_release_note_title">Update log:</string>
    <string name="about_terms_service">Terms of Service</string>
    <string name="action_item_aspect_ratio_1x1">1:1</string>
    <string name="action_item_aspect_ratio_4x3">4:3</string>
    <string name="action_item_aspect_ratio_full">Full</string>
    <string name="action_item_countdown_timer_10s">10s</string>
    <string name="action_item_countdown_timer_3s">3s</string>
    <string name="action_item_countdown_timer_5s">5s</string>
    <string name="action_item_custom_settings_c1">c1</string>
    <string name="action_item_custom_settings_c2">c2</string>
    <string name="action_item_face_beauty_level1">L1</string>
    <string name="action_item_face_beauty_level2">L2</string>
    <string name="action_item_face_beauty_level3">L3</string>
    <string name="action_item_picture_format_jpg">JPG</string>
    <string name="action_item_picture_format_jpg_48MP">JPG 48MP</string>
    <string name="action_item_picture_format_jpg_64MP">JPG 64MP</string>
    <string name="action_item_picture_format_raw">RAW</string>
    <string name="action_item_video_1080p">1080P 30FPS</string>
    <string name="action_item_video_1080p_120fps">1080P 120FPS</string>
    <string name="action_item_video_1080p_240fps">1080P 240FPS</string>
    <string name="action_item_video_1080p_480fps">1080P 480FPS</string>
    <string name="action_item_video_1080p_60fps">1080P 60FPS</string>
    <string name="action_item_video_1080p_960fps">1080P 960FPS</string>
    <string name="action_item_video_4k">4K 30FPS</string>
    <string name="action_item_video_4k_60fps">4K 60FPS</string>
    <string name="action_item_video_4k_cine">4K CINE 30FPS</string>
    <string name="action_item_video_4k_cine_60fps">4K CINE 60FPS</string>
    <string name="action_item_video_720p">720P 30FPS</string>
    <string name="action_item_video_720p_120fps">720P 120FPS</string>
    <string name="action_item_video_720p_240fps">720P 240FPS</string>
    <string name="action_item_video_720p_480fps">720P 480FPS</string>
    <string name="action_item_video_720p_60fps">720P 60FPS</string>
    <string name="action_item_video_720p_960fps">720P 960FPS</string>
    <string name="action_item_video_aspect_ratio_16x9">16:9</string>
    <string name="action_item_video_aspect_ratio_21x9">21:9</string>
    <string name="action_item_video_capture_rate_30fps">30FPS</string>
    <string name="action_item_video_capture_rate_60fps">60FPS</string>
    <string name="action_item_video_size_1080p">1080P</string>
    <string name="action_item_video_size_4k">4K</string>
    <string name="action_item_video_size_720p">720P</string>
    <string name="agree">Agree</string>
    <string name="app_name">Camera</string>
    <string name="app_name_video">Camcorder</string>
    <string name="app_permission_key">BkyUEaYYIpeWvcP2WQwsTROSiKbXZTjH71SlrA6FWLj9JdZvXSUYys4guD7eeaG/9bx3rhL+c9atucohN5K12p5kfMfo5lAJgzWJyf3OwS5xBCBPZ23AKMrgQxpCM6BMx8/vQNNl95rjv50xa9UBGe+hqSx1T6iVkGLki1kQLXFPAUFqnoZLknkWPNsPeAHaZ6esedJEQm+KtpMYkjRHjzqU+R+3zv6UwiIJKAW+CIkiAYGLXIf1+GsoqjEfmHj8ThDp7DYcUIpCxdgAOTfJUJZnQWB0xbJx+Dpu1Sk1ATjYQtwBalgeKkt1gVIpZorLZ5Je8+OKEflCUsU5bYXIOQ== 1 com.oneplus.camera 4681AD50CAFC580EDFE027BD3FE593254E72CD2DEF1B351FEA306CCF6220CF07 100</string>
    <string name="app_platform_key">ATBFAiANYfHuwg3/8hJCFDPWVgMn20DoSiWjau7yeXUN+sh92wIhAINOx58MjfflbVW6qPAH+upzqsR3GUTHy4ygmNhhy+PpX/7VlWVwb25hLHNldFRlbXBvcmFyeUF1dG9CcmlnaHRuZXNzQWRqdXN0bWVudCxzZXRSaW5nZXJNb2RlSW50ZXJuYWwsU2V0dGluZ3MuU2VjdXJlLFNldHRpbmdzLlN5c3RlbSxzdGFydEFjdGl2aXR5bgAAAA==</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auto">Auto</string>
    <string name="back_button_label">Back</string>
    <string name="bokeh_hint">Depth effect</string>
    <string name="bokeh_hint_camera_is_covered">Camera obstructed</string>
    <string name="bokeh_hint_low_light">More light required</string>
    <string name="bokeh_hint_no_depth_effect">No depth effect</string>
    <string name="bokeh_hint_no_subject">No subject found</string>
    <string name="bokeh_hint_object_distance_too_close">Move farther away</string>
    <string name="bokeh_hint_object_distance_too_far">Move closer</string>
    <string name="bokeh_hint_place_object_in_distance">Place the subject 1–7 feet away</string>
    <string name="bokeh_hint_place_object_in_distance_far">Place the subject 2–7 feet away</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="burst_disabled">Burst is disabled in the current mode</string>
    <string name="camera_high_temperature_exit_notification">Your phone temperature is too high. Camera is unavailable.</string>
    <string name="camera_high_temperature_exit_toast">Temperature is too high. Camera is temporarily unusable</string>
    <string name="capture_mode_photo">Photo</string>
    <string name="capture_mode_slow_motion">Slow motion</string>
    <string name="capture_mode_video">Video</string>
    <string name="quick_share_title">Quick Share</string>
    <string name="settings_about">About</string>
    <string name="settings_about_agreement">User Agreement</string>
    <string name="settings_about_copyright">"OnePlus All Rights reserved
@2017 OnePlus inc."</string>
    <string name="settings_about_version">Current version V%1$s</string>
    <string name="settings_auto_macro">Auto macro</string>
    <string name="settings_auto_macro_summary">Automatically open super macro mode based on subject and distance</string>
    <string name="settings_camera_storage">Saving to SD card is recommended</string>
    <string name="settings_capture_button_long_press_behavior_description">Long press shutter option to take video or burst photos</string>
    <string name="settings_capture_button_long_press_behavior_title">Long press shutter</string>
    <string name="settings_custom_modes_default_mode">Default</string>
    <string name="settings_custom_modes_summary">Select preferred modes to show on splash screen</string>
    <string name="settings_custom_modes_title">Custom modes</string>
    <string name="settings_fingerprint_long_press_to_take_photo_summary">From the viewfinder screen, long press the fingerprint sensor to take a photo</string>
    <string name="settings_fingerprint_long_press_to_take_photo_title">Long press to take a photo</string>
    <string name="settings_general">General</string>
    <string name="settings_grid">Grid</string>
    <string name="settings_hdr_summary">UltraShot HDR learns your environment, and intelligently blends multiple frames into an optimal photo</string>
    <string name="settings_hdr_title">UltraShot HDR</string>
    <string name="settings_hevc_summary">Record video in HEVC format to save space. It may not be able to be played or shared on unsupported devices and platforms.</string>
    <string name="settings_hevc_title">High efficiency video</string>
    <string name="settings_histogram">Histogram</string>
    <string name="settings_horizontal_reference_line">Horizontal reference line</string>
    <string name="settings_key_capture_button_long_press_behavior">CaptureButtonLongPressBehavior</string>
    <string name="settings_key_fingerprint_long_press_to_take_photo">FingerprintLongPressToTakePhoto</string>
    <string name="settings_key_grid">grid</string>
    <string name="settings_key_is_hdr_enabled">IsHdrEnabled</string>
    <string name="settings_key_is_hevc_enabled">IsHevcEnabled</string>
    <string name="settings_key_is_video_object_tracking_enabled">IsVideoObjectTrackingEnabled</string>
    <string name="settings_key_save_location">Location.Save</string>
    <string name="settings_key_save_media_to_sd_card">SaveMediaToSDCard</string>
    <string name="settings_key_shutter_sound">ShutterSound</string>
    <string name="settings_picture_mirror">Mirrored selfie photo</string>
    <string name="settings_pro">Pro</string>
    <string name="settings_save_location">Store location data</string>
    <string name="settings_shutter_sound">Shutter sound</string>
    <string name="settings_smart_scene_recognition_description">Intelligently recommend the best shooting effect for the current scene</string>
    <string name="settings_smart_scene_recognition_title">Smart Scene Recognition</string>
    <string name="settings_video_object_tracking_summary">Tap the subject to track or auto-focus immediately</string>
    <string name="settings_video_object_tracking_title">Focus tracking</string>
    <string name="settings_video_resolution_front">Resolution (Front)</string>
    <string name="settings_video_resolution_rear">Resolution (Rear)</string>
    <string name="settings_watermark_title">Shot on OnePlus watermark</string>
    <string name="settings_wide_lens_distortion_correction">Ultra Wide Lens Correction</string>
    <string name="shortcut_bokeh">@string/capture_mode_bokeh</string>
    <string name="shortcut_bokeh_short">@string/capture_mode_bokeh</string>
    <string name="shortcut_manual">@string/capture_mode_manual</string>
    <string name="shortcut_manual_short">@string/capture_mode_manual</string>
    <string name="shortcut_selfie">@string/capture_mode_selfie</string>
    <string name="shortcut_selfie_short">@string/capture_mode_selfie</string>
    <string name="shortcut_video">@string/capture_mode_video</string>
    <string name="shortcut_video_short">@string/capture_mode_video</string>
    <string name="tutorial_confirm_text">GOT IT</string>
    <string name="tutorial_infrared_mode">This filter is ideal for taking pictures of greenery and flora in sunlight</string>
    <string name="tutorial_infrared_mode_title">Photochrom</string>
    <string name="tutorial_quick_share_description">Long press gallery thumbnail to share your moments</string>
</resources>