<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:layout="@layout/layout_settings_video_resolution_hint_no_video_hdr" android:key="RestrictionInfoNoVideoHDR" />
    <Preference android:layout="@layout/layout_settings_video_resolution_hint_super_stable_time_lapse" android:key="RestrictionInfoSuperStableTimeLapseOnly" />
    <Preference android:layout="@layout/layout_settings_video_resolution_hint_no_video_hdr_no_his" android:key="RestrictionInfoNoVideoHDRNoHIS" />
    <Preference android:layout="@layout/layout_settings_video_resolution_hint_time_lapse" android:key="RestrictionInfoTimeLapseOnly" />
    <PreferenceCategory android:title="@string/settings_video_resolution_rear" android:key="BackVideo" />
    <PreferenceCategory android:title="@string/settings_video_resolution_front" android:key="FrontVideo" />
    <PreferenceCategory android:title="@string/capture_mode_slow_motion" android:key="SlowMotion" />
</PreferenceScreen>