<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/aboutImage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/settings_about_iamge_margin_top" android:src="@mipmap/app_icon" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
    <TextView android:id="@id/version" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/settings_about_version_margin_top" android:text="@string/settings_about_version" android:layout_below="@id/aboutImage" android:layout_centerHorizontal="true" android:textAlignment="center" />
    <TextView android:id="@id/agreement" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/settings_about_agreement_margin_bottom" android:text="@string/settings_about_agreement" android:layout_above="@id/copyright" android:layout_centerHorizontal="true" android:textAlignment="center" />
    <TextView android:id="@id/copyright" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/settings_about_copyright_margin_bottom" android:text="@string/settings_about_copyright" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:textAlignment="center" />
</RelativeLayout>