<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/tutorial_dim" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:id="@id/tutorial_touch_receiver" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <LinearLayout android:orientation="vertical" android:background="@drawable/tutorial_container_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="?tutorialInfraredContainerMarginBottom" android:layout_alignParentBottom="true" android:translationY="?tutorialInfraredContainerTranslationY" android:layout_marginStart="?tutorialInfraredContainerMarginStartEnd" android:layout_marginEnd="?tutorialInfraredContainerMarginStartEnd">
        <ImageView android:id="@id/tutorial_ui_image" android:layout_width="?tutorialInfraredPhotoWidth" android:layout_height="?tutorialInfraredPhotoHeight" android:layout_marginTop="?tutorialInfraredContainerMarginStartEnd" android:src="@drawable/tutorial_infrared_photo" android:scaleType="fitXY" android:layout_marginStart="?tutorialInfraredContainerMarginStartEnd" android:layout_marginEnd="?tutorialInfraredContainerMarginStartEnd" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="?tutorialInfraredTitleMarginTop" android:text="@string/tutorial_infrared_mode_title" android:layout_marginStart="?tutorialInfraredContainerMarginStartEnd" android:layout_marginEnd="?tutorialInfraredContainerMarginStartEnd" style="@style/TutorialTextTitle" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="?tutorialInfraredSummaryMarginTop" android:text="@string/tutorial_infrared_mode" android:layout_marginStart="?tutorialInfraredContainerMarginStartEnd" android:layout_marginEnd="?tutorialInfraredContainerMarginStartEnd" style="@style/TutorialTextSummary" />
        <TextView android:gravity="center" android:layout_gravity="end" android:id="@id/tutorial_confirm_text" android:background="?android:selectableItemBackground" android:layout_width="wrap_content" android:layout_height="?tutorialConfirmTextHeight" android:text="@string/tutorial_confirm_text" android:paddingStart="?tutorialConfirmTextPaddingStartEnd" android:paddingEnd="?tutorialConfirmTextPaddingStartEnd" style="@style/TutorialConfirmText" />
    </LinearLayout>
    <View android:background="@drawable/icon_triangle" android:layout_width="?tutorialTriangleWidth" android:layout_height="?tutorialTriangleHeight" android:layout_marginBottom="?tutorialInfraredContainerMarginBottom" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:translationY="?tutorialInfraredTriangleTranslationY" />
</RelativeLayout>