<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/tutorial_dim" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:id="@id/tutorial_touch_receiver" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <RelativeLayout android:orientation="vertical" android:id="@id/tutorial_quick_share_container" android:background="@drawable/tutorial_container_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/tutorial_quick_share_arrow" android:layout_centerHorizontal="true" android:layout_marginStart="?tutorialQuickSharingContainerMarginStart" android:layout_marginEnd="?tutorialQuickSharingContainerMarginEnd">
        <ImageView android:id="@id/tutorial_quick_share_image" android:layout_width="?tutorialQuickSharingImageWidth" android:layout_height="?tutorialQuickSharingImageHeight" android:src="@drawable/tutorial_quick_share" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
        <TextView android:textSize="?tutorialQuickSharingDescriptionTextSize" android:textStyle="bold" android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="?tutorialQuickSharingTitleMarginTop" android:text="@string/quick_share_title" android:layout_alignParentTop="true" android:layout_centerVertical="true" android:layout_marginStart="?tutorialQuickSharingTitleMarginStart" />
        <TextView android:textSize="?tutorialQuickSharingDescriptionTextSize" android:textColor="@android:color/white" android:id="@id/tutorial_quick_share_description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="?tutorialQuickSharingDescriptionMarginTop" android:text="@string/tutorial_quick_share_description" android:layout_below="@id/tutorial_quick_share_image" android:paddingStart="?tutorialQuickSharingDescriptionPaddingStart" android:paddingEnd="?tutorialQuickSharingDescriptionPaddingEnd" />
        <TextView android:gravity="center" android:id="@id/tutorial_quick_video_action_text" android:background="?android:selectableItemBackground" android:layout_width="wrap_content" android:layout_height="?tutorialConfirmTextHeight" android:text="@string/tutorial_confirm_text" android:layout_below="@id/tutorial_quick_share_description" android:layout_marginEnd="?tutorialConfirmTextMarginEndBottom" android:layout_alignParentEnd="true" style="@style/TutorialConfirmText" />
    </RelativeLayout>
    <ImageView android:id="@id/tutorial_quick_share_arrow" android:background="@drawable/icon_triangle" android:layout_width="?tutorialTriangleWidth" android:layout_height="?tutorialTriangleHeight" android:layout_marginTop="?tutorialQuickSharingArrowIconMarginTop" android:layout_marginBottom="?tutorialQuickSharingArrowIconMarginBottom" android:layout_alignParentBottom="true" android:translationY="?tutorialInfraredContainerTranslationY" android:layout_marginEnd="?tutorialQuickSharingArrowIconMarginEnd" android:layout_alignParentEnd="true" />
</RelativeLayout>